# jax_walrus

./: .gitignore  LICENSE  README.md  pyproject.toml
jax_walrus/: __init__.py  model.py
scripts/: compare.py  main.py
tests/: test_model.py
